# TitanicProblem

./: README.md  pyproject.toml  requirements.txt  solution.ipynb
